Fixed Night Mode Switch
The switch button was not centered within the button container, fixed it.

--- a/darkStyle.css
+++ b/darkStyle.css
@@ -95,7 +95,7 @@ html, body {
     position: relative;
     display: inline-block;
     width: 60px;
-    height: 30px;
+    height: 33px;
   }
   
   /* Hide default HTML checkbox */
