--- a/lightStyle.css
+++ b/lightStyle.css
@@ -95,7 +95,7 @@ html, body {
     position: relative;
     display: inline-block;
     width: 60px;
-    height: 30px;
+    height: 33px;
   }
   
   /* Hide default HTML checkbox */
@@ -146,7 +146,7 @@ html, body {
   
   /* Rounded sliders */
   .slider.round {
-    border-radius: 34px;
+    border-radius: 33px;
   }
   
   .slider.round:before {
